@@ -1,71 +1,106 @@
-
 package org.derjannik.lobbylynx;
 
-import org.bukkit.Bukkit;
-import org.bukkit.Location;
-import org.bukkit.Material;
-import org.bukkit.World;
+import org.bukkit.*;
 import org.bukkit.configuration.ConfigurationSection;
 import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
+import org.bukkit.plugin.java.JavaPlugin;
 
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class Navigator {
     private final LobbyLynx plugin;
+    private final ItemStack navigatorItem;
     private final String navigatorName;
     private final int guiSize;
     private final boolean showPlayerCount;
-    private final boolean closeAction;
+    private final boolean closeActionEnabled;
+    private final boolean teleportMessageEnabled;
+    private final int lobbySpawnSlot;
+    private final Location lobbySpawnLocation;
+    private final String teleportSound;
+    private final String openGuiSound;
+    private final boolean visualEffectsEnabled;
+    private final Particle visualEffectType;
 
     public Navigator(LobbyLynx plugin) {
         this.plugin = plugin;
         FileConfiguration config = plugin.getConfig();
-        this.navigatorName = config.getString("navigator.name", "Server Navigator");
-        this.guiSize = config.getInt("navigator.size", 36);
-        this.showPlayerCount = config.getBoolean("navigator.show_player_count", false);
-        this.closeAction = config.getBoolean("navigator.close_action", false);
+
+        // Navigator item setup
+        Material itemType = Material.valueOf(config.getString("navigator.item.type", "COMPASS"));
+        int itemSlot = config.getInt("navigator.item.slot", 0);
+        this.navigatorItem = new ItemStack(itemType);
+        ItemMeta meta = navigatorItem.getItemMeta();
+        if (meta != null) {
+            meta.setDisplayName(config.getString("navigator.name", "Server Navigator"));
+            navigatorItem.setItemMeta(meta);
+        }
+
+        // Navigator GUI setup
+        this.navigatorName = config.getString("navigator.gui.name", "Navigator");
+        this.guiSize = config.getInt("navigator.gui.size", 36);
+        this.showPlayerCount = config.getBoolean("navigator.icons.show_player_count", false);
+
+        // Action settings
+        this.closeActionEnabled = config.getBoolean("navigator.close_action.enabled", false);
+        this.teleportMessageEnabled = config.getBoolean("navigator.teleport_message.enabled", true);
+
+        // Lobby spawn setup
+        ConfigurationSection lobbySpawn = config.getConfigurationSection("navigator.lobby_spawn");
+        this.lobbySpawnSlot = lobbySpawn.getInt("slot", guiSize - 1);
+        String worldName = lobbySpawn.getString("world", "world");
+        double[] coords = lobbySpawn.getDoubleList("coordinates").stream().mapToDouble(Double::doubleValue).toArray();
+        this.lobbySpawnLocation = new Location(Bukkit.getWorld(worldName), coords[0], coords[1], coords[2]);
+
+        // Sounds
+        this.teleportSound = config.getString("navigator.sounds.teleport", "entity.enderman.teleport");
+        this.openGuiSound = config.getString("navigator.sounds.open_gui", "entity.player.levelup");
+
+        // Visual Effects
+        this.visualEffectsEnabled = config.getBoolean("navigator.visual_effects.enabled", false);
+        this.visualEffectType = Particle.valueOf(config.getString("navigator.visual_effects.type", "SMOKE"));
+
+        // Register the listener
+        plugin.getServer().getPluginManager().registerEvents(new NavigatorListener(plugin, this), plugin);
     }
 
     public void giveNavigatorItem(Player player) {
-        ItemStack navigatorItem = new ItemStack(Material.COMPASS);
-        ItemMeta meta = navigatorItem.getItemMeta();
-        if (meta != null) {
-            meta.setDisplayName(navigatorName);
-            navigatorItem.setItemMeta(meta);
-        }
         player.getInventory().setItem(0, navigatorItem);
     }
 
     public void openNavigator(Player player) {
         Inventory gui = Bukkit.createInventory(null, guiSize, navigatorName);
         populateGUI(gui);
+
         player.openInventory(gui);
+        if (openGuiSound != null) {
+            player.playSound(player.getLocation(), Sound.valueOf(openGuiSound), 1.0f, 1.0f);
+        }
     }
 
     private void populateGUI(Inventory gui) {
         FileConfiguration config = plugin.getConfig();
-        ConfigurationSection minigamesSection = config.getConfigurationSection("minigames");
-        
-        if (minigamesSection != null) {
-            for (String key : minigamesSection.getKeys(false)) {
-                ConfigurationSection minigame = minigamesSection.getConfigurationSection(key);
-                if (minigame != null) {
-                    String name = minigame.getString("name");
-                    int slot = minigame.getInt("slot");
-                    String icon = minigame.getString("icon");
-                    
-                    ItemStack item = new ItemStack(Material.valueOf(icon));
+        ConfigurationSection iconsSection = config.getConfigurationSection("navigator.icons");
+
+        if (iconsSection != null) {
+            for (String key : iconsSection.getKeys(false)) {
+                ConfigurationSection icon = iconsSection.getConfigurationSection(key);
+                if (icon != null) {
+                    String name = icon.getString("name");
+                    int slot = icon.getInt("slot");
+                    Material material = Material.valueOf(icon.getString("type", "COMPASS"));
+                    ItemStack item = new ItemStack(material);
+
                     ItemMeta meta = item.getItemMeta();
                     if (meta != null) {
                         meta.setDisplayName(name);
                         if (showPlayerCount) {
-                            // TODO: Implement player count logic
-                            meta.setLore(List.of("Players: 0"));
+                            meta.setLore(Arrays.asList("Players: " + Bukkit.getWorld(key).getPlayers().size()));
                         }
                         item.setItemMeta(meta);
                     }
@@ -73,83 +108,35 @@ public class Navigator {
                 }
             }
         }
-        
+
         // Add lobby spawn item
-        ItemStack lobbyItem = new ItemStack(Material.NETHER_STAR);
+        ItemStack lobbyItem = new ItemStack(Material.valueOf(plugin.getConfig().getString("navigator.lobby_spawn.item", "COMPASS")));
         ItemMeta lobbyMeta = lobbyItem.getItemMeta();
         if (lobbyMeta != null) {
             lobbyMeta.setDisplayName("Lobby Spawn");
             lobbyItem.setItemMeta(lobbyMeta);
         }
-        gui.setItem(guiSize - 1, lobbyItem);
-    }
-
-    public void updateNavigatorItems() {
-        // This method is called periodically to update player counts if enabled
-        if (showPlayerCount) {
-            for (Player player : Bukkit.getOnlinePlayers()) {
-                if (player.getOpenInventory().getTitle().equals(navigatorName)) {
-                    Inventory inv = player.getOpenInventory().getTopInventory();
-                    populateGUI(inv);
-                    player.updateInventory();
-                }
-            }
-        }
-    }
-
-    public void teleportToMinigame(Player player, String minigameName) {
-        FileConfiguration config = plugin.getConfig();
-        ConfigurationSection minigameSection = config.getConfigurationSection("minigames." + minigameName);
-        
-        if (minigameSection != null) {
-            String worldName = minigameSection.getString("world");
-            double x = minigameSection.getDouble("x");
-            double y = minigameSection.getDouble("y");
-            double z = minigameSection.getDouble("z");
-            float yaw = (float) minigameSection.getDouble("yaw");
-            float pitch = (float) minigameSection.getDouble("pitch");
-            
-            World world = Bukkit.getWorld(worldName);
-            if (world != null) {
-                Location location = new Location(world, x, y, z, yaw, pitch);
-                player.teleport(location);
-                player.sendMessage("Teleported to " + minigameName);
-            } else {
-                player.sendMessage("Error: World not found for " + minigameName);
-            }
-        } else {
-            player.sendMessage("Error: Minigame " + minigameName + " not found");
-        }
-    }
-
-    public void teleportToLobbySpawn(Player player) {
-        FileConfiguration config = plugin.getConfig();
-        ConfigurationSection lobbySection = config.getConfigurationSection("lobby_spawn");
-        
-        if (lobbySection != null) {
-            String worldName = lobbySection.getString("world");
-            double x = lobbySection.getDouble("x");
-            double y = lobbySection.getDouble("y");
-            double z = lobbySection.getDouble("z");
-            float yaw = (float) lobbySection.getDouble("yaw");
-            float pitch = (float) lobbySection.getDouble("pitch");
-            
-            World world = Bukkit.getWorld(worldName);
-            if (world != null) {
-                Location location = new Location(world, x, y, z, yaw, pitch);
-                player.teleport(location);
-                player.sendMessage("Teleported to Lobby Spawn");
-            } else {
-                player.sendMessage("Error: Lobby world not found");
-            }
-        } else {
-            player.sendMessage("Error: Lobby spawn not configured");
-        }
+        gui.setItem(lobbySpawnSlot, lobbyItem);
     }
 
     public boolean isNavigatorItem(ItemStack item) {
-        return item != null && item.getType() == Material.COMPASS && item.hasItemMeta() &&
-                item.getItemMeta().getDisplayName().equals(navigatorName);
+        return item != null && item.getType() == navigatorItem.getType() && item.hasItemMeta() &&
+                item.getItemMeta().getDisplayName().equals(navigatorItem.getItemMeta().getDisplayName());
+    }
+
+    public void teleportToLobbySpawn(Player player) {
+        if (teleportMessageEnabled) {
+            player.sendMessage(ChatColor.GREEN + "Teleporting to Lobby Spawn...");
+        }
+        player.teleport(lobbySpawnLocation);
+
+        // Play sound and effect
+        if (teleportSound != null) {
+            player.playSound(player.getLocation(), Sound.valueOf(teleportSound), 1.0f, 1.0f);
+        }
+        if (visualEffectsEnabled) {
+            player.getWorld().spawnParticle(visualEffectType, player.getLocation(), 20, 0.5, 0.5, 0.5, 0.1);
+        }
     }
 
     public String getNavigatorName() {
@@ -157,10 +144,6 @@ public class Navigator {
     }
 
     public boolean isCloseActionEnabled() {
-        return closeAction;
-    }
-
-    public boolean isShowPlayerCount() {
-        return showPlayerCount;
+        return closeActionEnabled;
     }
 }
